--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="search-container">
             <div class="logo">
-                <h1>GitHub</h1>
+                <h1 onclick="window.open("https://github.com/RizviBR0", "_blank");">GitHub</h1>
             </div>
 
             <div class="search-bar">
@@ -49,7 +49,7 @@
                 <li><a href="#">Status</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">About</a></li>
-                <li><a href="#"><img class="g-logo" src="image/mdi_github.png" alt="github icon""></a></li>
+                <li><a href="https://github.com/RizviBR0"><img class="g-logo" src="image/mdi_github.png" alt="github icon""></a></li>
             </ul>
         </div>
     </div>
