--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
             </ul>
         </div>
     </div>
+
+    <script>
+        document.querySelector("h1").addEventListener("click", function() {
+            window.open("https://github.com/RizviBR0", "_blank");
+        });
+    </script>
 </body>
 
 </html>
