--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="search-container">
             <div class="logo">
-                <h1 onclick="window.open("https://github.com/RizviBR0", "_blank");">GitHub</h1>
+                <h1>GitHub</h1>
             </div>
 
             <div class="search-bar">
